--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host=localhost",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
