--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start --host=localhost",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  
   "eslintConfig": {
     "extends": [
       "react-app",
