--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@fontsource/inter": "^5.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "reactstrap": "^9.2.0",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
