--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^5.0.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-time-picker": "^6.5.0",
     "reactstrap": "^9.2.0",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
