--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "reactstrap": "^9.2.0",
     "sweetalert2": "^11.7.20",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8080",
