--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "reactstrap": "^9.2.0",
+    "styled-components": "^6.0.8",
     "sweetalert2": "^11.7.20",
     "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
