--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^5.0.0",
     "react-datepicker": "^4.16.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
