--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-cookie": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
+    "react-native": "^0.72.4",
+    "react-native-web": "^0.19.8",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
