--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,9 @@
     "react-time-picker": "^6.5.0",
     "reactstrap": "^9.2.0",
     "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.28",
     "use-interval": "^1.4.0",
+    "web-vitals": "^3.4.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
