--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^5.0.0",
-    "react-datepicker": "^4.16.0",
+    "react-datepicker": "^4.18.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
@@ -34,7 +34,9 @@
     "react-time-picker": "^6.5.0",
     "reactstrap": "^9.2.0",
     "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.28",
     "use-interval": "^1.4.0",
+    "web-vitals": "^3.4.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
