--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.18.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.21",
     "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-native": "^0.72.4",
