--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
     "@mui/material": "^5.14.10",
     "@mui/system": "^5.14.7",
     "@mui/types": "^7.2.4",
-    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.0",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^5.0.0",
     "react-datepicker": "^4.18.0",
     "react-daum-postcode": "^3.1.3",
@@ -31,7 +32,7 @@
     "react-native-web": "^0.19.8",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-time-picker": "^6.5.0",
     "reactstrap": "^9.2.0",
